add page result to blog controller